[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-python-code-review-env"
version = "1.0.0"
description = "TorchReview Copilot: AI-powered Python code triage with PyTorch and OpenEnv validation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "gradio>=5.26.0",
    "openai>=1.76.0",
    "openenv-core[core]>=0.2.2",
    "pytest>=8.0.0",
    "torch>=2.2.0",
    "transformers>=4.45.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "python_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "python_env",
    "python_env.server",
    "python_env.tasks",
    "python_env.graders",
]
package-dir = { "python_env" = ".", "python_env.server" = "server", "python_env.tasks" = "tasks", "python_env.graders" = "graders" }
