[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-python-code-review-env"
version = "1.0.0"
description = "TorchReview Copilot: AI-powered Python code triage with PyTorch and OpenEnv validation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "gradio>=5.26.0",
    "openai>=1.76.0",
    "openenv-core[core]>=0.2.2",
    "streamlit>=1.44.0",
    "torch>=2.2.0",
    "transformers>=4.45.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "python_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "python_env",
    "python_env.server",
    "python_env.tasks",
    "python_env.graders",
    "python_env.api",
    "python_env.app",
    "python_env.app.agents",
    "python_env.app.env",
    "python_env.app.models",
    "python_env.app.services",
    "python_env.app.utils",
    "python_env.analyzers",
    "python_env.models",
    "python_env.schemas",
    "python_env.services",
    "python_env.utils",
]
package-dir = { "python_env" = ".", "python_env.server" = "server", "python_env.tasks" = "tasks", "python_env.graders" = "graders", "python_env.api" = "api", "python_env.app" = "app", "python_env.app.agents" = "app/agents", "python_env.app.env" = "app/env", "python_env.app.models" = "app/models", "python_env.app.services" = "app/services", "python_env.app.utils" = "app/utils", "python_env.analyzers" = "analyzers", "python_env.models" = "models", "python_env.schemas" = "schemas", "python_env.services" = "services", "python_env.utils" = "utils" }
