[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-python-code-review-env"
version = "1.0.0"
description = "TorchReview Copilot: AI-powered Python code triage with PyTorch and OpenEnv validation."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.111.0",
    "gradio>=5.26.0",
    "hf-xet>=1.4.3",
    "openai>=1.76.0",
    "openenv-core[core]>=0.2.2",
    "streamlit>=1.44.0",
    "torch>=2.2.0",
    "transformers>=4.45.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "python_env.server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
